Pass Java installation and info from Java LS per project (#1700)
* Pass Java installation and info from Java LS per project

Signed-off-by: BoykoAlex <alex.boyko@broadcom.com>

* VM -> Jre

Signed-off-by: BoykoAlex <alex.boyko@broadcom.com>

---------

Signed-off-by: BoykoAlex <alex.boyko@broadcom.com>